# docs/openapi.yaml
@@ -9,6 +9,8 @@ servers:
 tags:
 - name: "Users"
   description: "User management API"
+- name: "Cards"
+  description: "Cards management API"
 paths:
   /api/v1/users/{id}:
     get:
@@ -172,6 +174,24 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/UserDto"
+  /api/v1/cards:
+    post:
+      tags:
+      - "Cards"
+      operationId: "create_1"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CardCreateDto"
+        required: true
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CardDto"
 components:
   schemas:
     UserDto:
@@ -218,6 +238,33 @@ components:
       - "lastName"
       - "password"
       - "role"
+    CardCreateDto:
+      type: "object"
+      properties:
+        userId:
+          type: "integer"
+          format: "int64"
+        balance:
+          type: "number"
+    CardDto:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        maskedCardNumber:
+          type: "string"
+        expiryDate:
+          type: "string"
+          format: "date"
+        status:
+          type: "string"
+          enum:
+          - "ACTIVE"
+          - "BLOCKED"
+          - "EXPIRED"
+        balance:
+          type: "number"
     PageMetadata:
       type: "object"
       properties:
