# src/main/java/com/example/bankcards/controller/CardController.java
@@ -1,9 +1,15 @@
 package com.example.bankcards.controller;
 
+import com.example.bankcards.dto.CardCreateDto;
+import com.example.bankcards.dto.CardDto;
+import com.example.bankcards.service.CardService;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/api/v1/cards")
@@ -11,7 +17,11 @@ import org.springframework.web.bind.annotation.RequestMapping;
 @Tag(name = "Cards", description = "Cards management API")
 public class CardController {
 
+    private final CardService cardService;
 
-
+    @PostMapping
+    public CardDto create(@RequestBody @Valid CardCreateDto dto) {
+        return cardService.create(dto);
+    }
 }
 
